--- a/style.css
+++ b/style.css
@@ -28,7 +28,6 @@
 
 * {
   margin: 0;
-  padding: 0;
   text-align: left;
   font-weight: 400;
   line-height: 100%;
@@ -86,8 +85,8 @@ p {
   text-align: center;
 }
 
-/* main-header styles */
-.main-header-card {
+/* card1 styles */
+.card1 {
   gap: 1.5rem;
   padding-block: 0;
   background-color: var(--primary-color);
@@ -111,125 +110,125 @@ h1 .italic {
   color: var(--white);
 }
 
-.main-header-card > figure {
+.card1 figure {
   gap: 0.5rem;
   display: grid;
   grid-row: 3/4;
   place-items: center;
 }
 
-.rating-stars {
+.card1 img {
   width: 11.5rem;
 }
 
-.main-header-card figcaption {
+.card1 figcaption {
   color: var(--secondary-color-light);
 }
 
-/* multiple-platforms-card styles */
+/* card2 styles */
 
-.multiple-platforms-card {
+.card2 {
   background-color: var(--white);
 }
 
-.multiple-platforms-card > img {
+.card2 > img {
   width: 100%;
 }
 
-/* consistent-schedule-card styles */
+/* card3 styles */
 
-.consistent-schedule-card {
+.card3 {
   overflow: hidden;
   padding-bottom: 0;
   background-color: var(--secondary-color);
 }
 
-.consistent-schedule-card .container {
+.card3 .container {
   height: 11.5rem;
 }
 
-.consistent-schedule-card img {
+.card3 img {
   width: 70%;
 }
 
-/* schedule-post-card styles */
+/* card4 styles */
 
-.schedule-post-card {
+.card4 {
   justify-items: center;
   background-color: var(--primary-color-light);
 }
 
-.schedule-post-card h2 {
+.card4 h2 {
   text-align: center;
 }
-.schedule-post-card img {
+.card4 img {
   width: 100%;
 }
 
-/* grow-followers-card styles */
+/* card5 styles */
 
-.grow-followers-card {
+.card5 {
   gap: 2rem;
   place-items: center;
   background-color: var(--primary-color);
 }
 
-.grow-followers-card > img {
+.card5 img {
   width: 70%;
 }
 
-.grow-followers-card h3 {
+.card5 h3 {
   width: 70%;
   text-align: center;
   font-weight: unset;
   color: var(--secondary-color-light);
 }
 
-/* audience-growth-card styles */
+/* card6 styles */
 
-.audience-growth-card {
+.card6 {
   background-color: var(--white);
 }
 
-.audience-growth-card p {
+.card6 p {
   text-align: left;
 }
 
-.audience-growth-card > img {
+.card6 > img {
   width: 65%;
 }
 
-/* create-post-card styles */
+/* card7 styles */
 
-.create-post-card {
+.card7 {
   background-color: var(--secondary-color-light);
 }
 
-.create-post-card .italic {
+.card7 .italic {
   font-size: inherit;
   color: var(--black);
   font-weight: inherit;
 }
 
-.create-post-card .italic {
+.card7 .italic {
   color: var(--primary-color);
 }
 
-.create-post-card img {
+.card7 img {
   width: 70%;
 }
 
-/* ai-content-card styles */
+/* card8 styles */
 
-.ai-content-card {
+.card8 {
   background-color: var(--secondary-color);
 }
 
-.ai-content-card img {
+.card8 img {
   width: 75%;
 }
 
-.ai-content-card h3 {
+.card8 h3 {
   width: 80%;
 }
 
@@ -249,7 +248,19 @@ footer.attribution span {
 
 @media (min-width: 90rem) {
   main {
-    grid-template-columns: repeat(4, 14rem);
+    justify-content: center;
+    grid-template:
+      "card7 card1 card1 card4" 1fr
+      "card7 card1 card1 card4" 1fr
+      "card7 card1 card1 card4" 1fr
+      "card7 card1 card1 card4" 1fr
+      "card7 card2 card3 card4" 1fr
+      "card8 card2 card3 card4" 1fr
+      "card8 card2 card3 card4" 1fr
+      "card8 card6 card5 card5" 1fr
+      "card8 card6 card5 card5" 1fr
+      "card8 card6 card5 card5" 1fr/
+      14rem 14rem 14rem 14rem;
   }
 
   .card {
@@ -271,106 +282,100 @@ footer.attribution span {
     font-weight: 500;
   }
 
-  /* create-post-card styles */
-
-  .create-post-card {
-    grid-area: 1/1/6/2;
+  /* card1 styles */
+  .card1 {
+    grid-area: card1;
   }
 
-  .create-post-card .container {
-    width: 11rem;
-    align-self: center;
-  }
+  /* card2 styles */
 
-  .create-post-card img {
-    width: 100%;
-  }
-
-  /* main-header styles */
-  .main-header-card {
-    grid-area: 1/2/5/4;
-  }
-
-  /* ai-content-card styles */
-
-  .ai-content-card {
-    grid-area: 6/1/11/2;
-  }
-
-  .ai-content-card .container {
-    width: 11.5rem;
-    align-self: stretch;
-  }
-
-  .ai-content-card img {
-    width: 100%;
-  }
-
-  .ai-content-card h3 {
-    width: 95%;
-  }
-
-  /* schedule-post-card styles */
-  .schedule-post-card {
-    overflow: hidden;
-    grid-area: 1/4/8/5;
-  }
-  .schedule-post-card .container {
-    width: 12rem;
-    align-self: center;
-  }
-
-  .schedule-post-card img {
-    width: 170%;
-  }
-
-  /* multiple-platforms-card styles */
-
-  .multiple-platforms-card {
-    grid-area: 5/2/8/3;
+  .card2 {
+    grid-area: card2;
     overflow: hidden;
   }
-
-  .multiple-platforms-card img {
+  .card2 img {
     width: 150%;
   }
 
-  /* consistent-schedule-card styles */
+  /* card3 styles */
 
-  .consistent-schedule-card {
-    grid-area: 5/3/8/4;
+  .card3 {
+    grid-area: card3;
   }
-
-  .consistent-schedule-card img {
+  .card3 img {
     width: 100%;
   }
 
-  /* audience-growth-card styles */
-
-  .audience-growth-card {
-    grid-area: 8/2/11/3;
+  /* card4 styles */
+  .card4 {
+    overflow: hidden;
+    grid-area: card4;
+  }
+  .card4 .container {
+    width: 12rem;
+    align-self: center;
+  }
+  .card4 img {
+    width: 170%;
   }
 
-  .audience-growth-card img {
-    width: 90%;
-  }
+  /* card5 styles */
 
-  /* grow-followers-card styles */
-
-  .grow-followers-card {
+  .card5 {
     gap: 0.7rem;
     padding-block: 0.77rem;
-    grid-area: 8/3/11/5;
+    grid-area: card5;
     justify-items: left;
     grid-template-columns: auto 1fr;
   }
 
-  .grow-followers-card img {
+  .card5 img {
     width: 11rem;
   }
 
-  .grow-followers-card h3 {
+  .card5 h3 {
     text-align: start;
     width: 100%;
+  }
+
+  /* card6 styles */
+
+  .card6 {
+    grid-area: card6;
+  }
+
+  .card6 img {
+    width: 90%;
+  }
+
+  /* card7 styles */
+  .card7 {
+    grid-area: card7;
+  }
+  .card7 .container {
+    width: 11rem;
+    align-self: center;
+  }
+  .card7 img {
+    width: 100%;
+  }
+
+  /* card8 styles */
+
+  .card8 {
+    grid-area: card8;
+  }
+
+  .card8 .container {
+    width: 11.5rem;
+    align-self: stretch;
+  }
+
+  .card8 img {
+    width: 100%;
+  }
+
+  .card8 h3 {
+    width: 95%;
   }
 }
